[gd_scene load_steps=3 format=2]

[ext_resource path="res://vertex.png" type="Texture" id=1]
[ext_resource path="res://GraphVertex.gd" type="Script" id=2]

[node name="GraphVertex" type="TextureRect"]
show_behind_parent = true
margin_right = 24.0
margin_bottom = 24.0
mouse_filter = 0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="border" type="TextureRect" parent="."]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
[connection signal="mouse_entered" from="." to="." method="_on_GraphVertex_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_GraphVertex_mouse_exited"]
